--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 
 <a class="skip-link show-on-focus" href="#main">
 	Skip to content</a>
-
+	
+<div class="gtranslate_wrapper"></div>
+<script>window.gtranslateSettings = {"default_language":"en","native_language_names":true,"detect_browser_language":true,"languages":["en","fr","es"],"wrapper_selector":".gtranslate_wrapper","switcher_horizontal_position":"right","switcher_vertical_position":"top","float_switcher_open_direction":"bottom","alt_flags":{"en":"usa"}}</script>
+<script src="https://cdn.gtranslate.net/widgets/latest/float.js" defer></script><div class="container" style="background: #fff; padding: 25px;">
+	
 <div class="ct-drawer-canvas" data-location="start" >
 
 
