replace all text with AI; remove species page

--- a/reports/index.html
+++ b/reports/index.html
@@ -43,46 +43,16 @@
 									<nav id="header-menu-1" class="header-menu-1" data-id="menu" data-interaction="hover" data-menu="type-1" data-dropdown="type-1:simple" data-responsive="no" itemscope="" itemtype="https://schema.org/SiteNavigationElement" aria-label="Header Menu">
 										<ul id="menu-header" class="menu" role="menubar">
 											<li id="menu-item-129" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-129" role="none">
-												<a href="/identifying-species/" class="ct-menu-link" role="menuitem">Identifying Species</a>
+												<a href="https://www.inaturalist.org/projects/deadmans-head-forest?tab=observations&subtab=map" class="ct-menu-link" role="menuitem">iNaturalist</a>
 											</li>
 											<li id="menu-item-130" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-81 current_page_item menu-item-130" role="none">
-												<a href="/reports/" aria-current="page" class="ct-menu-link" role="menuitem">Creating a Living Laboratory</a>
+												<a href="/reports/" aria-current="page" class="ct-menu-link" role="menuitem">Reports</a>
 											</li>
 											<li class="menu-item menu-item-type-post_type menu-item-object-page" role="none">
 												<a href="mailto:eorae@yahoo.com?subject=livinglaboratory.org" class="ct-menu-link" role="menuitem">Contact Us</a>
 											</li>
 										</ul>
 									</nav>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div data-device="mobile">
-					<div data-row="middle" data-column-set="2">
-						<div class="ct-container">
-							<div data-column="start" data-placements="1">
-								<div data-items="primary">
-									<div class="site-branding" data-id="logo">
-										<div class="site-title-container">
-											<span class="site-title">
-												<a href="/" rel="home"> Living Laboratory </a>
-											</span>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div data-column="end" data-placements="1">
-								<div data-items="primary">
-									<button data-toggle-panel="#offcanvas" class="ct-header-trigger ct-toggle" data-design="simple" data-label="right" aria-label="Menu" data-id="trigger">
-										<span class="ct-label ct-hidden-sm ct-hidden-md ct-hidden-lg">Menu</span>
-
-										<svg class="ct-icon" width="18" height="14" viewBox="0 0 18 14" aria-hidden="true" data-type="type-1">
-											<rect y="0.00" width="18" height="1.7" rx="1" />
-											<rect y="6.15" width="18" height="1.7" rx="1" />
-											<rect y="12.3" width="18" height="1.7" rx="1" />
-										</svg>
-									</button>
 								</div>
 							</div>
 						</div>
