--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 		<noscript><link rel="stylesheet" href="css/no-scripts.min.css" type="text/css" /></noscript>
 		<link rel="stylesheet" id="ct-main-styles-inline-css" href="css/ct-main-styles-inline-css.css" media="all" />
 		<link rel="stylesheet" href="css/2024.css" media="all" />
+
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+		<link rel="manifest" href="/site.webmanifest" />
 	</head>
 
 	<body class="home page-template-default page page-id-6 wp-embed-responsive" data-link="type-2" data-prefix="single_page" data-header="type-1" data-footer="type-1" itemscope="itemscope" itemtype="https://schema.org/WebPage">
@@ -24,7 +29,7 @@
 
 		<div id="main-container">
 			<header id="header" class="ct-header" data-id="type-1" itemscope="" itemtype="https://schema.org/WPHeader">
-				<div data-device="desktop">
+				<div>
 					<div data-row="middle" data-column-set="2">
 						<div class="ct-container">
 							<div data-column="start" data-placements="1">
@@ -42,11 +47,11 @@
 								<div data-items="primary">
 									<nav id="header-menu-1" class="header-menu-1" data-id="menu" data-interaction="hover" data-menu="type-1" data-dropdown="type-1:simple" data-responsive="no" itemscope="" itemtype="https://schema.org/SiteNavigationElement" aria-label="Header Menu">
 										<ul id="menu-header" class="menu" role="menubar">
-											<li id="menu-item-129" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-129" role="none">
-												<a href="https://www.inaturalist.org/projects/deadmans-head-forest?tab=observations&subtab=map" class="ct-menu-link" role="menuitem">iNaturalist</a>
-											</li>
 											<li id="menu-item-130" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-130" role="none">
-												<a href="/reports/" class="ct-menu-link" role="menuitem">Reports</a>
+												<a href="reports.html" class="ct-menu-link" role="menuitem">Reports</a>
+											</li>
+											<li id="menu-item-129" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-129" role="none">
+												<a href="https://www.inaturalist.org/projects/deadmans-head-forest?tab=species" class="ct-menu-link" role="menuitem">Species</a>
 											</li>
 											<li class="menu-item menu-item-type-post_type menu-item-object-page" role="none">
 												<a href="mailto:eorae@yahoo.com?subject=livinglaboratory.org" class="ct-menu-link" role="menuitem">Contact Us</a>
@@ -90,12 +95,12 @@
 
 									<!-- <div class="wp-block-buttons is-layout-flex wp-block-buttons-is-layout-flex">
 										<div class="wp-block-button is-style-outline">
-											<a class="wp-block-button__link wp-element-button" href="/reports/">Read our Reports </a>
+											<a class="wp-block-button__link wp-element-button" href="reports.html">Read our Reports </a>
 										</div>
 									</div> -->
 								</div>
 								<figure class="wp-block-media-text__media">
-									<img decoding="async" width="1024" height="988" src="media/2023/01/Screen-Shot-2023-01-18-at-10.55.34-AM-1024x988.png" alt="" class="wp-image-103 size-full" srcset="media/2023/01/Screen-Shot-2023-01-18-at-10.55.34-AM-1024x988.png 1024w, media/2023/01/Screen-Shot-2023-01-18-at-10.55.34-AM-300x289.png 300w, media/2023/01/Screen-Shot-2023-01-18-at-10.55.34-AM-768x741.png 768w, media/2023/01/Screen-Shot-2023-01-18-at-10.55.34-AM.png 1130w" sizes="(max-width: 1024px) 100vw, 1024px" />
+									<img decoding="async" width="1024" height="988" src="media/map-points.jpg" alt="" class="wp-image-103 size-full" />
 								</figure>
 							</div>
 
@@ -113,7 +118,7 @@
 									<div class="wp-block-media-text__content">
 										<h4>Species Identification and Documentation:</h4>
 										<ul>
-											<li>Utilize <a href="https://www.inaturalist.org/projects/deadmans-head-forest?tab=observations&subtab=map">iNaturalist</a> to systematically identify and document the current species residing on and around the Bay of Fundy site.</li>
+											<li>Utilize <a href="https://www.inaturalist.org/projects/deadmans-head-forest">iNaturalist</a> to systematically identify and document the current species residing on and around the Bay of Fundy site.</li>
 											<li>Engage volunteers and local experts to contribute to the species identification process.</li>
 										</ul>
 									</div>
@@ -192,8 +197,17 @@
 			<footer id="footer" class="ct-footer" data-id="type-1" itemscope="" itemtype="https://schema.org/WPFooter">
 				<div data-row="top">
 					<div class="ct-container">
-						<div data-column="menu"></div>
-						<div data-column="ghost"></div>
+						<ul id="menu-header" class="menu" role="menubar">
+							<li id="menu-item-130" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-81 current_page_item menu-item-130" role="none">
+								<a href="reports.html" aria-current="page" class="ct-menu-link" role="menuitem">Reports</a>
+							</li>
+							<li id="menu-item-129" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-129" role="none">
+								<a href="https://www.inaturalist.org/projects/deadmans-head-forest?tab=species" class="ct-menu-link" role="menuitem">Species</a>
+							</li>
+							<li class="menu-item menu-item-type-post_type menu-item-object-page" role="none">
+								<a href="mailto:eorae@yahoo.com?subject=livinglaboratory.org" class="ct-menu-link" role="menuitem">Contact Us</a>
+							</li>
+						</ul>
 					</div>
 				</div>
 				<div data-row="bottom">
