--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
 
 		<link rel="stylesheet" id="wp-block-library-css" href="css/style.min.css" media="all" />
 		<link rel="stylesheet" id="global-styles-inline-css" href="css/global-styles-inline-css.css" media="all" />
-
 		<link rel="stylesheet" id="ct-main-styles-css" href="css/main.min.css" media="all" />
-		<link rel="stylesheet" id="ct-page-title-styles-css" href="css/page-title.min.css" media="all" />
-
-		<noscript><link rel="stylesheet" href="css/no-scripts.min.css" type="text/css" /></noscript>
 		<link rel="stylesheet" id="ct-main-styles-inline-css" href="css/ct-main-styles-inline-css.css" media="all" />
 		<link rel="stylesheet" href="css/2024.css" media="all" />
 
@@ -105,10 +101,10 @@
 							</div>
 
 							<figure class="wp-block-video">
-								<video controls src="media/2023/02/trees.mp4"></video>
+								<video controls src="video/trees.mp4"></video>
 							</figure>
 
-							<div id="goals" class="wp-block-group is-layout-constrained wp-container-core-group-layout-2 wp-block-group-is-layout-constrained" style="padding-top: var(--wp--preset--spacing--80); padding-right: var(--wp--preset--spacing--80); padding-bottom: var(--wp--preset--spacing--80); padding-left: var(--wp--preset--spacing--80)">
+							<div id="goals" class="wp-block-group is-layout-constrained wp-container-core-group-layout-2 wp-block-group-is-layout-constrained" style="padding: var(--wp--preset--spacing--80) var(--wp--preset--spacing--60)">
 								<h1 class="wp-block-heading has-text-align-center">Goals</h1>
 
 								<div class="wp-block-media-text is-stacked-on-mobile" style="grid-template-columns: 15% auto">
@@ -178,7 +174,7 @@
 
 								<div class="wp-block-media-text is-stacked-on-mobile" style="grid-template-columns: 15% auto">
 									<figure class="wp-block-media-text__media">
-										<img decoding="async" src="media/2023/01/expand.svg" alt="" class="wp-image-95 size-full" />
+										<img decoding="async" src="media/2023/01/binoculars_path.svg" alt="" class="wp-image-95 size-full" />
 									</figure>
 									<div class="wp-block-media-text__content">
 										<h4>Expansion of Research Sites:</h4>
