--- a/reports.html
+++ b/reports.html
@@ -108,11 +108,11 @@
 
 							<div class="wp-block-buttons is-layout-flex wp-block-buttons-is-layout-flex">
 								<div class="wp-block-button is-style-outline">
-									<a class="wp-block-button__link wp-element-button" href="Phase-2-Report-2023.pdf">Read the Full Phase 2 Report (4 MB)</a>
+									<a class="wp-block-button__link wp-element-button" href="reports/Phase-2-Report-2023.pdf">Read the Full Phase 2 Report (4 MB)</a>
 								</div>
 
 								<div class="wp-block-button is-style-outline">
-									<a class="wp-block-button__link wp-element-button" href="Phase-2-2023.pptx">Watch the Phase 2 Presentation (12 MB)</a>
+									<a class="wp-block-button__link wp-element-button" href="reports/Phase-2-2023.pptx">Watch the Phase 2 Presentation (12 MB)</a>
 								</div>
 							</div>
 						</div>
