text message changes

--- a/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/index.html
+++ b/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/index.html
@@ -20,10 +20,9 @@
 				<div class="large-8 medium-8 small-8 cell">
 					<div>
 						<ul class="menu align-right">
-							<li><a href="index.html">Home</a></li>
+							<li><a href="species.html">Species</a></li>
+							<li><a href="reports.html">reports</a></li>
 							<li><a href="#contact">Contact</a></li>
-							<li><a href="projects.html">Projects</a></li>
-							<li><a href="species.html">Species Identification</a></li>
 						</ul>
 						<!-- (https://www.naturetrust.nb.ca/en/home or https://www.conservationcouncil.ca/) -->
 					</div>
@@ -48,9 +47,9 @@
 				<div class="large-12 medium-12 small-12 cell">
 					<div>
 						<h2>Mission</h2>
-						<p class="lead">At Living Laboratory, our mission is to illuminate the profound significance of the Bay of Fundy by examining its ecosystem through a lens that encompasses the diverse array of species inhabiting and interacting within this vital marine environment. We are dedicated to fostering a deep understanding of the Bay's ecological complexities, advocating for its preservation, and empowering others to join us in stewarding this precious natural resource for future generations.</p>
+						<p class="lead">At Living Laboratory, our mission is to illuminate the profound significance of the Bay of Fundy by examining its ecosystem through a lens that encompasses the diverse array of species inhabiting and interacting within this vital marine environment. We are dedicated to fostering a deep understanding of the Bay's ecological complexities, advocating for all species preservation.</p>
 						<p>In the Anthropocene era, our growing impact on the environment raises crucial questions about the fate of countless species. As we navigate this era of human influence, it's imperative to understand how these species are responding and adapting to the challenges posed by our actions. This is the focal point of our mission: to identify, study, and provide assistance to the diverse array of species affected by our presence.</p>
-						<p>Our commitment begins with the protection and utilization of our property in Blacks Harbour, a rural community of Eastern Charlotte, New Brunswick, Canada. The pristine 100+ acre peninsula boasts 2 1/2 miles of ocean-front shoreline, extending into the Bay of Fundy. This expansive site serves as the canvas for our initial study—a pivotal step towards establishing a "living laboratory." Guided by the research insights of dedicated University of New Brunswick graduate students, we are poised to embark on this journey of discovery and intervention.</p>
+						<p>Our commitment begins with the protection and utilization of our property in Blacks Harbour, a rural community of Eastern Charlotte, New Brunswick, Canada. The pristine 100+ acre peninsula boasts 2 1/2 miles of ocean-front shoreline, extending into the Bay of Fundy. This expansive site serves as the canvas for our initial study—a pivotal step towards establishing a "living laboratory".</p>
 						<p>Through rigorous investigation and collaboration, we aim to unravel the intricate dynamics of species adaptation within this unique ecosystem. By leveraging our resources and expertise, we aspire to not only uncover the challenges faced by these species but also to devise effective strategies for their conservation and resilience. Together, we strive to make a meaningful difference in the lives of all beings that call this ecosystem home.</p>
 					</div>
 				</div>
@@ -163,7 +162,7 @@
 				</div>
 			</div>
 			<!--  -->
-			<div class="grid-x grid-padding-x grid-padding-y align-middle">
+			<!-- <div class="grid-x grid-padding-x grid-padding-y align-middle">
 				<div class="large-offset-1 large-3 medium-4 small-4 cell">
 					<div>
 						<p><img src="media/image.gif" /></p>
@@ -178,9 +177,9 @@
 						</ul>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<!--  -->
-			<div class="grid-x grid-padding-x grid-padding-y align-middle">
+			<!-- <div class="grid-x grid-padding-x grid-padding-y align-middle">
 				<div class="large-offset-1 large-3 medium-4 small-4 cell">
 					<div>
 						<p><img src="media/image.gif" /></p>
@@ -195,7 +194,7 @@
 						</ul>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<!--  -->
 			<div class="grid-x grid-padding-x grid-padding-y align-middle" id="contact">
 				<div class="large-4 medium-4 small-4 cell">
