--- a/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/species.html
+++ b/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/species.html
@@ -20,10 +20,9 @@
 				<div class="large-8 medium-8 small-8 cell">
 					<div>
 						<ul class="menu align-right">
-							<li><a href="index.html">Home</a></li>
+							<li><a href="species.html">Species</a></li>
+							<li><a href="reports.html">reports</a></li>
 							<li><a href="#contact">Contact</a></li>
-							<li><a href="projects.html">Projects</a></li>
-							<li><a href="species.html">Species Identification</a></li>
 						</ul>
 					</div>
 				</div>
