--- a/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/index.html
+++ b/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/index.html
@@ -19,9 +19,15 @@
 				</div>
 				<div class="large-8 medium-8 small-8 cell">
 					<div>
-						<ul class="menu align-right">
+						<ul class="dropdown menu align-right" data-dropdown-menu>
 							<li><a href="species.html">Species</a></li>
-							<li><a href="reports.html">reports</a></li>
+							<li>
+								<a href="reports.html">Reports</a>
+								<ul class="menu">
+									<li><a href="possible-approaches.html">Trees</a></li>
+									<li><a href="intertidal-zones.html">Intertidal</a></li>
+								</ul>
+							</li>
 							<li><a href="#contact">Contact</a></li>
 						</ul>
 						<!-- (https://www.naturetrust.nb.ca/en/home or https://www.conservationcouncil.ca/) -->
