--- a/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/intertidal-zones.html
+++ b/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/intertidal-zones.html
@@ -4,33 +4,39 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Phase Two: Creating a Living Laboratory for Deadmans Head Peninsula During the Age of Climate Change: Intertidal Zones within Deadmans Harbour and the Bay of Fundy</title>
+		<title>Intertidal Zones within Deadmans Harbour and the Bay of Fundy</title>
 		<link rel="stylesheet" href="css/foundation.css" />
 		<link rel="stylesheet" href="css/app.css" />
 	</head>
 	<body>
 		<div class="grid-container">
 			<!--  -->
-			<div class="grid-x grid-padding-x grid-padding-y align-middle">
+			<header class="grid-x grid-padding-x grid-padding-y align-middle">
 				<div class="large-4 medium-4 small-4 cell">
 					<div>
-						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" id="logo" /> Living Laboratory </a>
+						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" id="logo" /> LivingLaboratory.org</a>
 					</div>
 				</div>
 				<div class="large-8 medium-8 small-8 cell">
 					<div>
-						<ul class="menu align-right">
+						<ul class="dropdown menu align-right" data-dropdown-menu>
 							<li><a href="species.html">Species</a></li>
-							<li><a href="reports.html">reports</a></li>
-							<li><a href="#contact">Contact</a></li>
+							<li>
+								<a href="reports.html">Reports</a>
+								<ul class="menu align-right">
+									<li><a href="possible-approaches.html">Creating a Living Laboratory</a></li>
+									<li><a href="intertidal-zones.html">Intertidal Zones</a></li>
+								</ul>
+							</li>
+							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</div>
 				</div>
-			</div>
+			</header>
 			<!--  -->
 			<div class="grid-x grid-padding-x">
 				<div class="large-12 cell">
-					<h1>Phase Two: Creating a Living Laboratory for Deadmans Head Peninsula During the Age of Climate Change: Intertidal Zones within Deadmans Harbour and the Bay of Fundy</h1>
+					<h1>Intertidal Zones within Deadmans Harbour and the Bay of Fundy</h1>
 				</div>
 			</div>
 
@@ -42,6 +48,7 @@
 							By: Allysia Murphy, Sarah Dooley, Allison Meister, Kianna Hughes Clarke, Dhiman Sen <br />
 							December 7, 2023
 						</p>
+						<p><a href="intertidal-zones/intertidal-zones.pdf" class="button large">Read the Full Report (4 MB)</a> <a href="intertidal-zones/intertidal-zones.pptx" class="button large">View PowerPoint Presentation (12 MB)</a></p>
 						<h2>Abstract</h2>
 						<p>
 							The owners of Deadmans Head Peninsula, Ernie and Judy Edwards, aim to create a living laboratory on their property to study the effects of climate change on the coastal ecosystem. Located within the Bay of Fundy the property is subject to many unique features including the natural wonder of the highest tides in the world that the Bay of Fundy is famous for. In Phase One of this project the forested landscape of the peninsula was assessed for floral and faunal assemblages and the possible impact of climate change on them. In Phase Two of this project we assess the coastal community structure that makes up the intertidal zone on both sides of the peninsula, sites are along Deadmans Harbour and the Bay of Fundy. From the field work and literature review done we present a comprehensive overview and baseline of the species that live within the site or those that could potentially interact with the site and what the possible impacts of climate change could mean
@@ -55,8 +62,8 @@
 			<div class="grid-x grid-padding-x">
 				<div class="large-6 medium-6 small-6 cell">
 					<div>
+						<code>DRONE VIDEO</code>
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/ubFq-wV3Eic?si=J_u0VkDZEwReHOj_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-						<a href="reports/intertidal-zones.pptx">Watch the Phase 2 Presentation (12 MB)</a>
 					</div>
 				</div>
 				<div class="large-6 medium-6 small-6 cell">
@@ -107,28 +114,30 @@
 						<h2>Conclusion</h2>
 						<p>Ernie and Judy Edwards property was studied to create a baseline dataset to establish a possible living laboratory. Phase One of the project occurred in 2022 and focused on the forested area of the property, with this report being Phase Two and focusing on the intertidal zone of the property. Data was collected to identify the species that can be found in the various tidal zones, as well as drone images and thermal imagery of Beach One and the Cove site. A literature review was done to identify what species may be impacted by different parameters that can be caused by climate change.</p>
 						<p>Various species in the intertidal zone and surrounding area will be impacted by climate change, according to literature and what was identified on the site. Research of the sites analyzed in this report is important for ensuring the sustainability of the area for future generations, continuation of this project in the future can be used to get a clearer understanding of the impact a changing climate is having on the region.</p>
-						<a href="reports/intertidal-zones.pdf" class="button large">Read the Full Report (4 MB)</a>
 					</div>
 				</div>
 			</div>
+
 			<!--  -->
-			<div class="grid-x grid-padding-x grid-padding-y align-middle" id="contact">
+			<footer class="grid-x grid-padding-x grid-padding-y align-middle" id="contact">
 				<div class="large-4 medium-4 small-4 cell">
 					<div>
-						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" id="logo" /> Living Laboratory </a>
+						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" id="logo" /> LivingLaboratory.org</a>
 					</div>
 				</div>
 				<div class="large-8 medium-8 small-8 cell">
 					<div>
 						<ul class="menu align-right">
-							<li><a href="mailto:eorae@yahoo.com?subject=livinglaboratory.org">eorae@yahoo.com</a></li>
-							<li><a href="tel:+15086659192">1-508-665-9192</a></li>
-							<li><a href="legal.html">Legal Stuff</a></li>
+							<ul class="menu align-right">
+								<li><a href="species.html">Species</a></li>
+								<li><a href="reports.html">Reports</a></li>
+								<li><a href="contact.html">Contact</a></li>
+								<li><a href="legal.html">Legal Stuff</a></li>
+							</ul>
 						</ul>
-						<!-- (https://www.naturetrust.nb.ca/en/home or https://www.conservationcouncil.ca/) -->
 					</div>
 				</div>
-			</div>
+			</footer>
 			<!--  -->
 		</div>
 
