--- a/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/legal.html
+++ b/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/legal.html
@@ -11,22 +11,28 @@
 	<body>
 		<div class="grid-container">
 			<!--  -->
-			<div class="grid-x grid-padding-x grid-padding-y align-middle">
+			<header class="grid-x grid-padding-x grid-padding-y align-middle">
 				<div class="large-4 medium-4 small-4 cell">
 					<div>
-						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" id="logo" /> Living Laboratory </a>
+						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" id="logo" /> LivingLaboratory.org</a>
 					</div>
 				</div>
 				<div class="large-8 medium-8 small-8 cell">
 					<div>
-						<ul class="menu align-right">
+						<ul class="dropdown menu align-right" data-dropdown-menu>
 							<li><a href="species.html">Species</a></li>
-							<li><a href="reports.html">reports</a></li>
-							<li><a href="#contact">Contact</a></li>
+							<li>
+								<a href="reports.html">Reports</a>
+								<ul class="menu align-right">
+									<li><a href="possible-approaches.html">Creating a Living Laboratory</a></li>
+									<li><a href="intertidal-zones.html">Intertidal Zones</a></li>
+								</ul>
+							</li>
+							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</div>
 				</div>
-			</div>
+			</header>
 			<!--  -->
 			<div class="grid-x grid-padding-x">
 				<div class="large-12 cell">
@@ -47,24 +53,27 @@
 					<p>All files and information contained in this website are copyright by <em>Living Laboratory</em>, and may not be duplicated, copied, modified or adapted, in any way without our written permission. Our website may contain our service marks or trademarks as well as those of our affiliates or other companies, in the form of words, graphics, and logos. Your use of our website or services does not constitute any right or license for you to use our service marks or trademarks, without the prior written permission of <em>Living Laboratory</em>. Our content, as found within our website or services, is protected under United States and foreign copyrights. The copying, redistribution, use or publication by you of any such content, is strictly prohibited. Your use of our website or services does not grant you any ownership rights to our content.</p>
 				</div>
 			</div>
+
 			<!--  -->
-			<div class="grid-x grid-padding-x grid-padding-y align-middle" id="contact">
+			<footer class="grid-x grid-padding-x grid-padding-y align-middle" id="contact">
 				<div class="large-4 medium-4 small-4 cell">
 					<div>
-						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" id="logo" /> Living Laboratory </a>
+						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" id="logo" /> LivingLaboratory.org</a>
 					</div>
 				</div>
 				<div class="large-8 medium-8 small-8 cell">
 					<div>
 						<ul class="menu align-right">
-							<li><a href="mailto:eorae@yahoo.com?subject=livinglaboratory.org">eorae@yahoo.com</a></li>
-							<li><a href="tel:+15086659192">1-508-665-9192</a></li>
-							<li><a href="legal.html">Legal Stuff</a></li>
+							<ul class="menu align-right">
+								<li><a href="species.html">Species</a></li>
+								<li><a href="reports.html">Reports</a></li>
+								<li><a href="contact.html">Contact</a></li>
+								<li><a href="legal.html">Legal Stuff</a></li>
+							</ul>
 						</ul>
-						<!-- (https://www.naturetrust.nb.ca/en/home or https://www.conservationcouncil.ca/) -->
 					</div>
 				</div>
-			</div>
+			</footer>
 			<!--  -->
 		</div>
 
