--- a/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/possible-approaches.html
+++ b/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/possible-approaches.html
@@ -4,33 +4,39 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Creating a “Living Laboratory” for Deadmans Head Forest During the Age of Climate Change</title>
+		<title>Creating a Living Laboratory for Deadmans Head Forest During the Age of Climate Change</title>
 		<link rel="stylesheet" href="css/foundation.css" />
 		<link rel="stylesheet" href="css/app.css" />
 	</head>
 	<body>
 		<div class="grid-container">
 			<!--  -->
-			<div class="grid-x grid-padding-x grid-padding-y align-middle">
+			<header class="grid-x grid-padding-x grid-padding-y align-middle">
 				<div class="large-4 medium-4 small-4 cell">
 					<div>
-						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" id="logo" /> Living Laboratory </a>
+						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" id="logo" /> LivingLaboratory.org</a>
 					</div>
 				</div>
 				<div class="large-8 medium-8 small-8 cell">
 					<div>
-						<ul class="menu align-right">
+						<ul class="dropdown menu align-right" data-dropdown-menu>
 							<li><a href="species.html">Species</a></li>
-							<li><a href="reports.html">reports</a></li>
-							<li><a href="#contact">Contact</a></li>
+							<li>
+								<a href="reports.html">Reports</a>
+								<ul class="menu align-right">
+									<li><a href="possible-approaches.html">Creating a Living Laboratory</a></li>
+									<li><a href="intertidal-zones.html">Intertidal Zones</a></li>
+								</ul>
+							</li>
+							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</div>
 				</div>
-			</div>
+			</header>
 			<!--  -->
 			<div class="grid-x grid-padding-x">
 				<div class="large-12 cell">
-					<h1>Creating a “Living Laboratory” for Deadmans Head Forest During the Age of Climate Change</h1>
+					<h1>Creating a Living Laboratory for Deadmans Head Forest During the Age of Climate Change</h1>
 				</div>
 			</div>
 			<!--  -->
@@ -41,10 +47,11 @@
 							By: Abigail Evans, Emilie Noel, Peter Anyah, Rohan Mishra<br />
 							December 08, 2022
 						</p>
+						<p><a href="possible-approaches/possible-approaches.pdf" class="button large">Read the Full Report (6 MB)</a> <a href="possible-approaches/possible-approaches.pptx" class="button large">View PowerPoint Presentation (70 MB)</a></p>
 						<h2>Abstract</h2>
 						<p>Deadmans Head Forest is in the town of Blacks Harbor, in Southwestern New Brunswick. This forest can be characterized as a typical New England Acadian Forest with a hilly terrain. The forest is a peninsula surrounded by water on three sides and is located on the Bay of Fundy. Being a New England Acadian Forest, Deadmans Head has both coniferous and deciduous trees and hosts a whole variety of flora and fauna. The East side of the property is lined by cliff beaches and the West side is lined with sandy beaches and cliff beaches closer to the point.</p>
-						<p>The owners of Deadmans Head Forest, Ernie and Judy Edwards, aspire to create a “living laboratory” on their property, which would be led by the Nature Trust of New Brunswick. The Edwards' main goal for Deadmans Head Forest is that is be preserved and protected, so that future generations can enjoy it. As a first step in the creation of this “living laboratory”, Deadmans Head Forest was studied by four University of New Brunswick graduate students. Baseline data for the forest was collected during several site visits to determine key characteristics of this forest. Furthermore, literature research was conducted to determine predictions for the future of this forest. An NDVI (Normalized Difference Vegetation Index) map was created for the property to determine the overall health of the forest. As well, a LanDSET model was created to determine soil moisture.</p>
-						<p>Through this data collection, literature, mapping, and model building, a baseline for this “living laboratory” was created. Special emphasis was placed on the impacts of climate change on Deadmans Head Forest throughout this study.</p>
+						<p>The owners of Deadmans Head Forest, Ernie and Judy Edwards, aspire to create a Living Laboratory on their property, which would be led by the Nature Trust of New Brunswick. The Edwards' main goal for Deadmans Head Forest is that is be preserved and protected, so that future generations can enjoy it. As a first step in the creation of this Living Laboratory, Deadmans Head Forest was studied by four University of New Brunswick graduate students. Baseline data for the forest was collected during several site visits to determine key characteristics of this forest. Furthermore, literature research was conducted to determine predictions for the future of this forest. An NDVI (Normalized Difference Vegetation Index) map was created for the property to determine the overall health of the forest. As well, a LanDSET model was created to determine soil moisture.</p>
+						<p>Through this data collection, literature, mapping, and model building, a baseline for this Living Laboratory was created. Special emphasis was placed on the impacts of climate change on Deadmans Head Forest throughout this study.</p>
 					</div>
 				</div>
 			</div>
@@ -53,8 +60,12 @@
 			<div class="grid-x grid-padding-x">
 				<div class="large-6 medium-6 small-6 cell">
 					<div>
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/ubFq-wV3Eic?si=J_u0VkDZEwReHOj_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-						<a href="reports/possible-approaches.pptx">Watch the Phase 1 Presentation (70 MB)</a>
+						<figure class="video">
+							<video controls src="possible-approaches/point.mp4"></video>
+						</figure>
+						<figure class="video">
+							<video controls src="possible-approaches/trees.mp4"></video>
+						</figure>
 					</div>
 				</div>
 				<div class="large-6 medium-6 small-6 cell">
@@ -103,29 +114,31 @@
 				<div class="large-12 medium-12 small-12 cell">
 					<div>
 						<h2>Conclusion</h2>
-						<p>Ernie and Judy Edwards' property, Deadman Head's Forest, was studied to create a baseline dataset to establish a possible “living laboratory”. Field surveys and spatial models were conducted to assess their current forest health and conditions. Overall, the forest is considered moderately healthy (NDVI) and hosted a variety of species. Future climate change on the property will shift the current tree species Northwards. Increased temperatures and precipitations are expected. Deadmans Head will remain resilient for the near future and is adaptable to future climate events. Continuous monitoring of the forest is recommended.</p>
-						<a href="reports/possible-approaches.pdf" class="button large">Read the Full Report (6 MB)</a>
+						<p>Ernie and Judy Edwards' property, Deadman Head's Forest, was studied to create a baseline dataset to establish a possible Living Laboratory. Field surveys and spatial models were conducted to assess their current forest health and conditions. Overall, the forest is considered moderately healthy (NDVI) and hosted a variety of species. Future climate change on the property will shift the current tree species Northwards. Increased temperatures and precipitations are expected. Deadmans Head will remain resilient for the near future and is adaptable to future climate events. Continuous monitoring of the forest is recommended.</p>
 					</div>
 				</div>
 			</div>
+
 			<!--  -->
-			<div class="grid-x grid-padding-x grid-padding-y align-middle" id="contact">
+			<footer class="grid-x grid-padding-x grid-padding-y align-middle" id="contact">
 				<div class="large-4 medium-4 small-4 cell">
 					<div>
-						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" id="logo" /> Living Laboratory </a>
+						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" id="logo" /> LivingLaboratory.org</a>
 					</div>
 				</div>
 				<div class="large-8 medium-8 small-8 cell">
 					<div>
 						<ul class="menu align-right">
-							<li><a href="mailto:eorae@yahoo.com?subject=livinglaboratory.org">eorae@yahoo.com</a></li>
-							<li><a href="tel:+15086659192">1-508-665-9192</a></li>
-							<li><a href="legal.html">Legal Stuff</a></li>
+							<ul class="menu align-right">
+								<li><a href="species.html">Species</a></li>
+								<li><a href="reports.html">Reports</a></li>
+								<li><a href="contact.html">Contact</a></li>
+								<li><a href="legal.html">Legal Stuff</a></li>
+							</ul>
 						</ul>
-						<!-- (https://www.naturetrust.nb.ca/en/home or https://www.conservationcouncil.ca/) -->
 					</div>
 				</div>
-			</div>
+			</footer>
 			<!--  -->
 		</div>
 
