--- a/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/species.html
+++ b/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/species.html
@@ -10,23 +10,30 @@
 	</head>
 	<body>
 		<div class="grid-container">
+
 			<!--  -->
-			<div class="grid-x grid-padding-x grid-padding-y align-middle">
+			<header class="grid-x grid-padding-x grid-padding-y align-middle">
 				<div class="large-4 medium-4 small-4 cell">
 					<div>
-						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" id="logo" /> Living Laboratory </a>
+						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" id="logo" /> LivingLaboratory.org</a>
 					</div>
 				</div>
 				<div class="large-8 medium-8 small-8 cell">
 					<div>
-						<ul class="menu align-right">
+						<ul class="dropdown menu align-right" data-dropdown-menu>
 							<li><a href="species.html">Species</a></li>
-							<li><a href="reports.html">reports</a></li>
-							<li><a href="#contact">Contact</a></li>
+							<li>
+								<a href="reports.html">Reports</a>
+								<ul class="menu align-right">
+									<li><a href="possible-approaches.html">Creating a Living Laboratory</a></li>
+									<li><a href="intertidal-zones.html">Intertidal Zones</a></li>
+								</ul>
+							</li>
+							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</div>
 				</div>
-			</div>
+			</header>
 			<!--  -->
 			<div class="grid-x grid-padding-x">
 				<div class="large-12 cell">
@@ -46,31 +53,72 @@
 				<div class="large-12 medium-12 small-12 cell">
 					<div>
 						<h2 class="wp-block-heading">Recent Observations</h2>
+<select>
+	<option>English Name a/z</option>
+	<option>Latin Name a/z</option>
+	<option>Date oldest/newest</option>
+</select>
+<select id="dino-select">
+	<option>All Species</option>
+	<optgroup label="Kingdom">
+	  <option>abcd...</option>
+	  <option>abcd...</option>
+	  <option>abcd...</option>
+	</optgroup>
+	<optgroup label="Family">
+		<option>abcd...</option>
+		<option>abcd...</option>
+		<option>abcd...</option>
+	</optgroup>
+  </select>
+  <select id="dino-select">
+	  <option>All Locations</option>
+	  <optgroup label="Deadmans Head">
+		<option>abcd...</option>
+		<option>abcd...</option>
+		<option>abcd...</option>
+	  </optgroup>
+	  <optgroup label="Second Site">
+		  <option>abcd...</option>
+		  <option>abcd...</option>
+		  <option>abcd...</option>
+	  </optgroup>
+	</select>
+	<select>
+		<option>All Threat Levels</option>
+		<option>Endangered</option>
+		<option>Threatened</option>
+		<option>Vulneratble</option>
+		<option>Extinct</option>
+	</select>
+	<select>
+		<option>All Establishment Means</option>
+		<option>Native</option>
+		<option>Introduced</option>
+	</select>
+<p><img src="_dev/species.jpg" style="max-height:none; width: 100%;" /></p>
 
-Sort: English Name a/z | Latin Name a/z | Date<br>
-Toggle: Location<br>
-Toggle: Family | Kingdom<br>
-Toggle: Endangered | Threatened | Vulneratble | Extint
-<p><img src="image000001.jpg" style="max-height:none; width: 100%;" /></p>
 
 			<!--  -->
-			<div class="grid-x grid-padding-x grid-padding-y align-middle" id="contact">
+			<footer class="grid-x grid-padding-x grid-padding-y align-middle" id="contact">
 				<div class="large-4 medium-4 small-4 cell">
 					<div>
-						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" id="logo" /> Living Laboratory </a>
+						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" id="logo" /> LivingLaboratory.org</a>
 					</div>
 				</div>
 				<div class="large-8 medium-8 small-8 cell">
 					<div>
 						<ul class="menu align-right">
-							<li><a href="mailto:eorae@yahoo.com?subject=livinglaboratory.org">eorae@yahoo.com</a></li>
-							<li><a href="tel:+15086659192">1-508-665-9192</a></li>
-							<li><a href="legal.html">Legal Stuff</a></li>
+							<ul class="menu align-right">
+								<li><a href="species.html">Species</a></li>
+								<li><a href="reports.html">Reports</a></li>
+								<li><a href="contact.html">Contact</a></li>
+								<li><a href="legal.html">Legal Stuff</a></li>
+							</ul>
 						</ul>
-						<!-- (https://www.naturetrust.nb.ca/en/home or https://www.conservationcouncil.ca/) -->
 					</div>
 				</div>
-			</div>
+			</footer>
 			<!--  -->
 		</div>
 
